# PCHandler

./: .flake8  .gitignore  .license-header.txt  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DesignDecisions.md  LICENSE  MIGRATION-v1.0.md  README.md  README.rst  RELEASE.md  RULESETS.md  codecov.yml  conftest.py  mypy.ini  pyproject.toml  pyrightconfig.json  release-please-config.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/actions/setup-python-deps/: action.yml
.github/docker/: gpu-runner.Dockerfile
.github/rulesets/: develop.json  main.json
.github/scripts/: check_publish_gate.py
.github/workflows/: canary.yml  ci.yml  gpu-image-refresh.yml  pre-commit.yml  publish-pypi.yml  publish-testpypi.yml  release-please.yml  versioning.yml
_old/: geometry.py
docs/: Makefile  README.md
docs/libs/: gsegutils_objects.inv  objects.inv
docs/source/: about.rst  api.rst  conf.py  examples.rst  faq.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  limitations.rst  modules.rst  pchandler.constants.rst  pchandler.core.rst  pchandler.data_io.core.rst  pchandler.data_io.csv.rst  pchandler.data_io.e57.rst  pchandler.data_io.las.rst  pchandler.data_io.pcd.rst  pchandler.data_io.ply.rst  pchandler.data_io.rst  pchandler.data_io.util.rst  pchandler.filters.cartesian_filters.rst  pchandler.filters.core.rst  pchandler.filters.downsample.rst  pchandler.filters.gpu.rst  pchandler.filters.outlier_filter.rst  pchandler.filters.rst  pchandler.filters.scalar_field_filters.rst  pchandler.filters.spherical_coordinate_filters.rst  pchandler.fov.rst  pchandler.geometry.coordinates.rst  pchandler.geometry.optimal_shift.rst  pchandler.geometry.rst  pchandler.geometry.spherical.angle.rst  pchandler.geometry.spherical.fov.rst  pchandler.geometry.spherical.rst  pchandler.geometry.splitter.rst  pchandler.geometry.transforms.rst  pchandler.geometry.util.rst  pchandler.rst  (+4 more)
docs/source/_static/: pchandler_theme.css
docs/source/examples/: file_handlers.rst  filters.rst  general.rst  index.rst  numerical_shift.rst  numpy_mixins.rst  scalar_fields.rst  transformations.rst
pchandler/: __init__.py  data_io.py  fov.py  geometry.py
src/old_pchandler/: util.py
src/old_pchandler/geometry/: __init__.py  core.py  splitter.py  transforms.py
src/pchandler/: BaseArray.md  README.md  __init__.py  __init__.pyi  _optional.py  base_arrays.py  base_classes.py  base_descriptors.py  base_fields.py  base_types.py  constants.py  core.py  data_io.py  fov.py  geometry.py  protocols.py  scalar_fields.py  scratch.ipynb  util.py  validation.py  validators.py
src/pchandler/data_io/: __init__.py  __init__.pyi  core.py  csv.py  e57.py  las.py  pcd.py  ply.py  util.py
src/pchandler/filters/: __init__.py  __init__.pyi  cartesian_filters.py  core.py  downsample.py  gpu.py  outlier_filter.py  scalar_field_filters.py  spherical_coordinate_filters.py
src/pchandler/geometry/: __init__.py  __init__.pyi  base_classes.py  coordinates.py  core.py  core_experimental.py  data_io.py  filters.py  fov.py  gpu.py  optimal_shift.py  scalar_field_manager.py  scalar_fields.py  splitter.py  transformations.py  transforms.py  util.py  validation.py
src/pchandler/old_pchandler/: __init__.py
src/pchandler/scalar_fields/: __init__.py  __init__.pyi  core.py  scalar_field_manager.py  scalar_fields.py  sf_manager.py  sf_types.py
src/pchandler/spherical/: __init__.py  angle.py
src/pchandler/v2/: __init__.py  base_arrays.py  base_descriptors.py  base_types.py  constants.py  custom_types.py  data_io.py  fov.py  protocols.py  scratch.ipynb  typing.py  util.py  validators.py
src/scanmatcher/: base_classes.py  types.py  util.py  validation.py
src/scanmatcher/geometry/: coordinates.py  validation.py
stubs/laspy/: __init__.pyi
stubs/open3d/: __init__.pyi  core.pyi  geometry.pyi  utility.pyi
stubs/open3d/t/: __init__.pyi  geometry.pyi
stubs/plyfile/: __init__.pyi
stubs/py4dgeo/: __init__.pyi
stubs/pye57/: __init__.pyi  e57.pyi
stubs/shapely/: __init__.pyi  affinity.pyi
stubs/shapely/geometry/: __init__.pyi
tests/: temp2.csv  test_Self.py  test_angle_conversions.py  test_base_arrays.py  test_base_classes.py  test_base_descriptors.py  test_base_fields.py  test_base_util.py  test_constants.py  test_core.py  test_core_experimental.py  test_data_io.py  test_geometry_point_cloud_data.py  test_optional.py  test_pchandler_core.py  test_pydantic_library.py  test_scratch.ipynb  test_stubs.py  test_stubs_drift.py  test_util.py  test_validators.py  util.py  utils.py
tests/benchmarks/: __init__.py  conftest.py  test_downsample.py  test_splitter.py  test_util.py
tests/data/: test_target.e57  test_target_intensity.las  test_target_rgb.ply  test_target_rgb_temp.ply  test_target_scalar_field.ply  test_target_w_normals.e57
tests/data/E57/: XYZ_Intensity.e57  XYZ_Normals.e57  XYZ_Only.e57  XYZ_RGB.e57  XYZ_RGB_Intensity.e57  XYZ_RGB_Normals_Intensity.e57
tests/data/LAS/: XYZ_Intensity.las  XYZ_Normals.las  XYZ_Only.las  XYZ_RGB.las  XYZ_RGB_Intensity.las  XYZ_RGB_Normals_Intensity_SFs.las  XYZ_Reflectance.las  XYZ_SFs.las
tests/data/LAZ/: XYZ_Intensity.laz  XYZ_Normals.laz  XYZ_Only.laz  (+5 more)
tests/data_io/: test_core.py  test_csv.py  test_e57.py  test_las.py  test_pcd.py  test_ply.py
tests/filters/: test_cartesian_filters.py  test_core_filters.py  test_downsample.py  test_gpu.py  test_outlier_filter.py  test_scalar_field_filters.py  test_spherical_coordinate_filters.py
tests/geometry/: test_base_classes.py  test_coordinates.py  test_core.py  test_core_geometry.py  test_fov.py  test_optimal_shift.py  test_scalar_field_manager.py  test_scalar_fields.py  test_singleton_unified.py  test_splitter.py  test_static_check_optimal_shift.py  test_transforms.py  test_util_geometry.py  test_validation.py  test_validation_functions.py  test_validators.py
tests/other/: test_pydantic_library.py
tests/scalar_fields/: test_scalar_field_manager.py  test_scalar_fields.py
tests/spherical/: test_angle.py  test_fov.py
(+74 files in other folders)
