[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pchandler"
description = "Toolbox for point-cloud handling, processing and analysis"
requires-python = ">=3.12"
keywords = ["LiDAR", "Pointclouds"]
license = {file = "LICENSE"}
authors = [
	{name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
dynamic = [
	"version",
	"readme",
]
classifiers = [
#	"Programming Language :: Python :: 3.10",
#	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",

    "Private :: Do Not Upload" # REMOVE BEFORE FLIGHT -- PyPI will always reject packages with classifiers beginning with Private ::
]
# TODO add GSEGUtils
dependencies = [
	"alphashape ~= 1.3",
	"joblib ~= 1.5",
	"laspy[lazrs,laszip] ~= 2.6",
	"numpy ~= 2.0",
	"numpydantic ~= 1.6",
	"open3d ~= 0.19",
	"plyfile ~= 1.1",
	"pydantic ~= 2.11",
	"pye57 ~= 0.4",
#	"scipy ~= 1.15",
	"shapely ~= 2.1",
	"typing-extensions ~= 4.13",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
pchandler = ["py.typed", "**/*.pyi"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
write_to = "src/pchandler/_version.py"
local_scheme = "no-local-version"
version_scheme = "post-release"
tag_regex = '^v?(?P<version>\d+\.\d+\.\d+(?:(?:a|b|rc)\d+)?(?:\.post\d+)?(?:\.dev\d+)?)$'
git_describe_command = "git describe --dirty --tags --long --match 'v[0-9]*.[0-9]*.[0-9]*'"

[tool.black]
line-length = 120
target-version = [ 'py312' ]

[tool.isort]
profile = "black"


[project.urls]
homepage = "https://gseg.igp.ethz.ch/"
documentation = "https://google.com"
repository = "https://github.com/gseg-ethz/PCHandler.git"
Issues = "https://github.com/gseg-ethz/PCHandler/issues"
Changelog = "https://github.com/gseg-ethz/PCHandler/blob/main/CHANGELOG.md"



[project.optional-dependencies]
doc = [
    "sphinx ~= 8.2",
    "sphinx_rtd_theme"
]
dev = [
    "black~=25.1",            # formatter
    "isort~=6.0",             # import sorter
    "flake8~=7.3",            # style linter
    "flake8-bugbear",         # best-practice checks
    "flake8-docstrings",      # docstring checks
    "mypy~=1.17",             # static typing
    "pre-commit~=4.3",        # git hooks runner
    "pytest~=8.4",            # test framework
    "coverage~=7.0",          # coverage reporting
]
cuda11 = ["geopandas ~= 1.0", "cudf-cu11 == 25.4.*", "cuspatial-cu11 == 25.4.*", "cuproj-cu11 == 25.4.*",
	"cuml-cu11 == 25.4.*", "dask-cudf-cu11 == 25.4.*", ]
cuda12 = ["geopandas ~= 1.0", "cudf-cu12 == 25.4.*", "cuspatial-cu12 == 25.4.*", "cuproj-cu12 == 25.4.*",
	"cuml-cu12 == 25.4.*", "dask-cudf-cu12 == 25.4.*", ]
