[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pchandler"
description = "Toolbox for point-cloud handling, processing and analysis"
requires-python = ">=3.12,<3.13"
keywords = ["LiDAR", "Pointclouds"]
license = {file = "LICENSE"}
authors = [
	{name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
dynamic = [
	"version",
	"readme",
]
classifiers = [
#	"Programming Language :: Python :: 3.10",
#	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

dependencies = [
	"alphashape ~= 1.3",
	"joblib ~= 1.5",
	"laspy[lazrs,laszip] ~= 2.6",
	"numpy >= 2.0, < 2.4",
	"numpydantic ~= 1.6",
	"plyfile ~= 1.1",
	"pydantic ~= 2.11",
	"pye57 ~= 0.4",
#	"scipy ~= 1.15",
	"shapely ~= 2.1",
	"typing-extensions ~= 4.13",

    "GSEGUtils @ git+ssh://git@github.com/gseg-ethz/GSEGUtils.git@v0.5.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
pchandler = ["py.typed", "**/*.pyi"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "src/pchandler/_version.py"
local_scheme = "no-local-version"
version_scheme = "post-release"
tag_regex = '^v?(?P<version>\d+\.\d+\.\d+(?:(?:a|b|rc)\d+)?(?:\.post\d+)?(?:\.dev\d+)?)$'
git_describe_command = "git describe --dirty --tags --long --match 'v[0-9]*.[0-9]*.[0-9]*'"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "C90", "D", "NPY"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# tests/** lint-debt: pre-existing violations Plan 01-02a's `ruff check src/`
# never caught and `--no-verify` masked. Plan 01-03b surfaced them by re-
# enabling pre-commit hooks. Same pattern Plan 01-03a applied to GSEGUtils.
# D100-D103/D106/D205/D400/D414: docstring quirks on test fns/fixtures/classes.
# E711/E712: idiomatic `== None` / `== True` style in assertions.
# B007/B017/B028/B905: pytest-friendly patterns (blind Exception assertions,
#                     unused loop counters, missing zip strict, warnings
#                     without explicit stacklevel).
# F841: unused-variable inside tests (kept for assertion structure / future).
# Tracked alongside the test-side mypy/numpydantic deferral; a future tests/
# D-sweep plan analogous to Plan 01-02b can attack these inline.
"tests/**" = [
    "D100", "D101", "D102", "D103", "D106", "D205", "D400", "D414",
    "E711", "E712",
    "B007", "B017", "B028", "B905",
    "F841",
]
"docs/source/conf.py" = ["D100", "D103"]


[project.urls]
homepage = "https://gseg.igp.ethz.ch/"
documentation = "https://gsegutils.readthedocs.io/en/latest/"
repository = "https://github.com/gseg-ethz/PCHandler.git"
Issues = "https://github.com/gseg-ethz/PCHandler/issues"
Changelog = "https://github.com/gseg-ethz/PCHandler/blob/main/CHANGELOG.md"



[project.optional-dependencies]
extra = [
    "py4dgeo ~= 0.8",
	"open3d ~= 0.19",
]
doc = [
    "sphinx ~= 8.2.3, <8.3",  # DOC-01: block 8.3 autosummary regression (sphinx-doc/sphinx#14166)
    "sphinx_rtd_theme"
]
dev = [
    "ruff~=0.15",             # lint + format
    "mypy~=1.17",             # static typing
    "pyright~=1.1",           # informational type checker (warn-only, D-12)
    "pre-commit~=4.3",        # git hooks runner
    "pytest~=8.4",            # test framework
    "pytest-cov~=5.0",        # pytest coverage plugin (used by ci.yml --cov)
    "coverage~=7.0",          # coverage reporting
    "pytest-benchmark ~= 5.2",  # Phase 4 D-30 — opt-in microbenchmark plugin (excluded from CI)
    "pytest-randomly ~= 4.1",   # TEST-07: shuffle test order each run; surfaces order-deps
]
cuda11 = ["geopandas ~= 1.0", "cudf-cu11 == 25.4.*", "cuspatial-cu11 == 25.4.*", "cuproj-cu11 == 25.4.*",
	"cuml-cu11 == 25.4.*", "dask-cudf-cu11 == 25.4.*", ]
cuda12 = ["geopandas ~= 1.0", "cudf-cu12 == 25.4.*", "cuspatial-cu12 == 25.4.*", "cuproj-cu12 == 25.4.*",
	"cuml-cu12 == 25.4.*", "dask-cudf-cu12 == 25.4.*", ]

[tool.pytest.ini_options]
markers = [
    "benchmark: opt-in microbenchmark (excluded from CI via `-m \"not benchmark\"`)",
]
