[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pchandler"
description = "A Python library for handling point cloud data, including reading, writing, and processing various point cloud formats."
requires-python = ">=3.10"
keywords = ["LiDAR", "Pointclouds"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
	{name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
dynamic = [
	"version",
	"readme",
]
classifiers = [
	"Programming Language :: Python :: 3"
]
dependencies = [
	"numpy ~= 1.24",
	"plyfile ~= 0.7",
	"laspy[lazrs,laszip] ~= 2.4",
	"pye57 ~= 0.4",
	"typing-extensions ~= 4.9",
	"joblib ~= 1.3",
	"alphashape ~= 1.3",
	"open3d ~= 0.18",
	"shapely ~= 2.0",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
write_to = "src/pchandler/_version.py"
local_scheme = "no-local-version"
version_scheme = "post-release"


[project.urls]
homepage = "https://gseg.igp.ethz.ch/"
repository = "https://github.com/gseg-ethz/PCHandler.git"
Issues = "https://github.com/gseg-ethz/PCHandler/issues"
Changelog = "https://github.com/gseg-ethz/PCHandler/blob/main/CHANGELOG.md"


[project.optional-dependencies]
doc = ["sphinx ~= 5.1", "sphinx_rtd_theme"]
dev = ["black ~= 22.10"]
cuda11 = ["geopandas ~= 1.0", "cudf-cu11 ~= 24.10", "cuspatial-cu11 ~= 24.10", "cuproj-cu11 ~= 24.10",
	"cuml-cu11 ~= 24.10", "dask-cudf-cu11 ~= 24.10"]
cuda12 = ["geopandas ~= 1.0", "cudf-cu12 ~= 24.10", "cuspatial-cu12 ~= 24.10", "cuproj-cu12 ~= 24.10",
	"cuml-cu12 ~= 24.10", "dask-cudf-cu12 ~= 24.10"]
